--- a/index.html
+++ b/index.html
@@ -131,7 +131,14 @@ const CIE={
   // Respiratorio
   "J45":"Asma","J46":"Estado asmático","J41":"Bronquitis crónica simple/mucopurulenta","J42":"Bronquitis crónica NE","J43":"Enfisema","J44":"EPOC",
   // Oftalmo
-  "H25":"Catarata senil","H26":"Otras cataratas","H28":"Trastornos del cristalino en otras enfermedades","Q12":"Catarata congénita","H54":"Ceguera y baja visión","H40":"Glaucoma","H42":"Glaucoma en otras enfermedades",
+  "H25":"Catarata senil","H26":"Otras cataratas","H28":"Trastornos del cristalino en otras enfermedades","Q12":"Catarata congénita","H54":"Ceguera y baja visión","H40":"Glaucoma",$1
+  // Flebo/Dermato – Úlceras
+  "I83.0":"Várices de miembros inferiores con úlcera",
+  "I83.1":"Várices de miembros inferiores con inflamación",
+  "I83.2":"Várices de miembros inferiores con úlcera e inflamación",
+  "I83.9":"Várices de miembros inferiores, no especificadas",
+  "L97":"Úlcera de extremidad inferior, no clasificada en otra parte",
+  "L98.4":"Úlcera crónica de la piel, no clasificada en otra parte",
   // Hepático / VIH / TB / EII
   "B18":"Hepatitis viral crónica","K70":"Hígado alcohólico","K71":"Hígado tóxico","K72":"Insuficiencia hepática","K73":"Hepatitis crónica","K74":"Fibrosis/Cirrosis","K76.6":"Hipertensión portal",
   "B21":"VIH con neoplasias","B22":"VIH con otras enfermedades","B23":"Otras afecciones por VIH","B24":"VIH NE",
