--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     .badge{font-size:.75rem;font-weight:700;padding:2px 8px;border-radius:999px;border:1px solid var(--border);background:#fff}
 
     .topbar{display:flex;gap:8px;align-items:center;margin:6px 0 14px}
-    .search{flex:1;display:flex;gap:8px; position:relative;} /* <= posiciona contenedor para autocompletar */
+    .search{flex:1;display:flex;gap:8px; position:relative;}
     .search input{flex:1;padding:12px 14px;border:1px solid var(--border);border-radius:10px;font-size:1rem}
     .search button{padding:12px 14px;border:1px solid var(--border);border-radius:10px;background:#f3f4f6;cursor:pointer}
 
@@ -62,7 +62,7 @@
     .btn{width:100%;padding:12px;font-size:1.05em;font-weight:800;border:none;border-radius:10px;cursor:pointer;background:#374151;color:#fff;margin-top:10px}
     footer{margin-top:18px;font-size:.9rem;color:#4b5563;text-align:center}
 
-    /* === AUTOCOMPLETE (sugerencias) === */
+    /* === AUTOCOMPLETE === */
     .autocomplete-box{
       position:absolute; top:100%; left:0; right:0; margin-top:6px;
       background:#fff; border:1px solid var(--border); border-radius:10px; box-shadow:var(--shadow);
@@ -100,7 +100,6 @@
           <div class="search" style="width:100%">
             <input id="q" type="search" placeholder="Buscar patología o código CIE-10…" aria-label="Buscar patología" />
             <button id="clearQ" title="Limpiar búsqueda">Limpiar</button>
-            <!-- === AUTOCOMPLETE: contenedor de sugerencias === -->
             <div id="suggestions" class="autocomplete-box" role="listbox" hidden></div>
           </div>
         </div>
@@ -533,7 +532,6 @@ const CIE = {
   "G50":"Trastornos del nervio trigémino",
   // (… resto sin cambios …)
 };
-
 /* ===== Estructura (52 condiciones exactas) ===== */
 function exp(base, digits){ return (digits||[]).map(d=>`${base}.${d}`); }
 function expMany(specs){
@@ -546,8 +544,6 @@ function expMany(specs){
 }
 
 const GROUPS = [
-  /* (SIN CAMBIOS) — estructura completa tal como la enviaste */
-  /* ... */
   {points:2, title:'Condiciones que suman 2 puntos (8)', subgroups:[
     {name:'Neuro-psiquiatría', items:[
       {id:'demencia',    name:'Demencia', codes:['F00.0','F00.1','F00.2','F00.9','F01.0','F01.1','F01.2','F01.3','F01.8','F01.9','F02.0','F02.1','F02.2','F02.3','F02.4','F02.8','F03']},
@@ -565,7 +561,63 @@ const GROUPS = [
     ]}
   ]},
   {points:1, title:'Condiciones que suman 1 punto (44)', subgroups:[
-    /* … (resto exactamente igual que tu envío) … */
+    {name:'Salud Mental y Conductual', items:[
+      {id:'alcohol',     name:'Consumo perjudicial o dependiente de alcohol', codes:['F10.0','F10.1','F10.2','F10.3','F10.4','F10.5','F10.6','F10.7','F10.8','F10.9','Y91.2','Y91.3','Y91.9','Z71.4','Z72.1']},
+      {id:'tabaquismo',  name:'Tabaquismo', codes:['F17.0','F17.1','F17.2','F17.3','F17.4','F17.5','F17.6','F17.7','F17.8','F17.9','T65.2','Z71.6','Z72.0']},
+      {id:'drogas',      name:'Consumo perjudicial o dependiente de drogas', codes:[...expMany([{base:'F11',subs:['0','1','2','3','4','5','6','7','8','9']}]),...expMany([{base:'F12',subs:['0','1','2','3','4','5','6','7','8','9']}]),...expMany([{base:'F13',subs:['0','1','2','3','4','5','6','7','8','9']}]),...expMany([{base:'F14',subs:['0','1','2','3','4','5','6','7','8','9']}]),...expMany([{base:'F15',subs:['0','1','2','3','4','5','6','7','8','9']}]),...expMany([{base:'F16',subs:['0','1','2','3','4','5','6','7','8','9']}]),...expMany([{base:'F18',subs:['0','1','2','3','4','5','6','7','8','9']}]),...expMany([{base:'F19',subs:['0','1','2','3','4','5','6','7','8','9']}]),'Z72.2']},
+      {id:'tca',         name:'Trastornos alimentarios', codes:['F50.0','F50.1','F50.2','F50.3','F50.4','F50.5','F50.8','F50.9']},
+      {id:'dep_leve',    name:'Depresión Leve o moderada', codes:['F33.0','F33.1','F33.4','F33.8','F33.9']},
+      {id:'retraso_mental',name:'Retraso mental', codes:['F70.0','F70.1','F70.8','F70.9','F71.0','F71.1','F71.8','F71.9','F72.0','F72.1','F72.8','F72.9','F73.0','F73.1','F73.8','F73.9','F78.0','F78.1','F78.8','F78.9','F79.0','F79.1','F79.8','F79.9']},
+      {id:'ansiedad',    name:'Trastorno Ansioso', codes:['F40.0','F40.1','F40.2','F40.8','F40.9', 'F41.0','F41.1','F41.2','F41.3','F41.8','F41.9']},
+      {id:'tp',          name:'Trastorno de la personalidad', codes:['F60.0','F60.1','F60.2','F60.3','F60.4','F60.5','F60.6','F60.7','F60.8','F60.9', 'F61', 'F62.0','F62.1','F62.8','F62.9', 'F68.0', 'F69']},
+      {id:'tsueño',      name:'Trastornos del sueño', codes:['F51.0','F51.1','F51.2','F51.4','F51.9','F51.8', 'G47.3','G47.4','G47.8','G47.9']},
+      {id:'otros_sm',    name:'Otros trastornos de Salud Mental', codes:['F31.0','F31.1','F31.2','F31.3','F31.4','F31.5','F31.6','F31.7','F31.8','F31.9', 'F34.0','F34.1','F34.8','F34.9', 'F63.0','F63.2','F63.8','F63.9', 'F66.1','F66.2','F66.8','F66.9']}
+    ]},
+    {name:'Cardiovascular y Vascular Periférico', items:[
+      {id:'dislipidemia',name:'Dislipidemias', codes:['E78.0','E78.1','E78.2','E78.3','E78.4','E78.5','E78.6','E78.8','E78.9']},
+      {id:'hta',         name:'Hipertensión', codes:['I10','I11.0','I11.9','I12.0','I12.9','I13.0','I13.1','I13.2','I13.9']},
+      {id:'fa',          name:'Fibrilación auricular / flutter', codes:['I48.0','I48.1','I48.2','I48.3','I48.4','I48.9']},
+      {id:'arritmias',   name:'Arritmia cardíaca / Taquicardia paroxística', codes:['I47.0','I47.1','I47.2','I47.9','I49.0','I49.8','I49.9']},
+      {id:'insuf_card',  name:'Insuficiencia cardíaca', codes:['I50.0','I50.1','I50.9']},
+      {id:'ulcera',      name:'Úlcera crónica de la piel', codes:['I83.0','I83.1','I83.2','I83.9','L97','L98.4']}
+    ]},
+    {name:'Neurológico', items:[
+      {id:'tia',         name:'Isquemia cerebral transitoria (TIA)', codes:['G45.0','G45.1','G45.2','G45.3','G45.4','G45.8','G45.9']},
+      {id:'epilepsia',   name:'Epilepsia', codes:['G40.0','G40.1','G40.2','G40.3','G40.4','G40.6','G40.7','G40.8','G40.9']},
+      {id:'em',          name:'Esclerosis múltiple', codes:['G35']},
+      {id:'parkinson',   name:'Parkinsonismo', codes:['G20','G21.1','G22','G23.0','G23.1','G23.2','G23.8','G23.9','G24.0','G24.1','G24.2','G24.4','G24.5','G24.8','G24.9','G25.2','G25.3','G25.4','G25.5','G26']}
+    ]},
+    {name:'Respiratorio', items:[
+      {id:'asma', name:'Asma', codes:['J45.0','J45.1','J45.8','J45.9','J46']},
+      {id:'epoc', name:'Enfermedad pulmonar obstructiva crónica (EPOC)', codes:['J41.0','J41.1','J41.8','J42','J43.0','J43.1','J43.2','J43.8','J43.9','J44.0','J44.1','J44.8','J44.9']}
+    ]},
+    {name: 'Músculo-esquelético y Reumatológico', items: [
+      {id:'ar',          name:'Artritis Reumatoidea', codes:['M05.0','M05.1','M05.2','M05.3','M05.8','M05.9','M06.0','M06.1','M06.2','M06.3','M06.4','M06.8','M06.9']},
+      {id:'artrosis',    name:'Artrosis de rodilla-cadera u otro tipo', codes:['M15.0','M15.1','M15.2','M15.3','M15.4','M15.8','M15.9','M16.0','M16.1','M16.2','M16.3','M16.4','M16.5','M16.6','M16.7','M16.9','M17.0','M17.1','M17.2','M17.3','M17.4','M17.5','M17.9','M18.0','M18.1','M18.2','M18.3','M18.4','M18.5','M18.9','M19.0','M19.1','M19.2','M19.9']},
+      {id:'lupus',       name:'Lupus', codes:['L93.0','L93.1','L93.2','M32.0','M32.1','M32.8','M32.9']},
+      {id:'dolor_neuro', name:'Dolor neuropático / fibromialgia', codes:['G50.0','G50.1','G50.8','G50.9','M79.7']},
+      {id:'gota',        name:'Hiperuricemia / Gota', codes:['M10.0', 'M10.1', 'M10.2', 'M10.3', 'M10.4', 'M10.9']}
+    ]},
+    {name: 'Endocrino / Metabólico / Renal / Urológico', items: [
+      {id:'obesidad',    name:'Obesidad', codes:['E66.0','E66.1','E66.2','E66.8','E66.9']},
+      {id:'erc_i_iii',   name:'Enfermedad renal crónica', codes:['N15.0','N15.1','N15.8','N15.9','N18.1','N18.2','N18.3','N18.9','N19']},
+      {id:'tiroides',    name:'Trastornos tiroideos', codes:['E01.0','E01.1','E01.2','E02','E03.0','E03.1','E03.2','E03.3','E03.4','E03.5','E03.8','E03.9','E05.0','E05.1','E05.2','E05.3','E05.4','E05.5','E05.8','E05.9']},
+      {id:'hbp',         name:'Hipertrofia prostática benigna', codes:['N40']}
+    ]},
+    {name: 'Gastrointestinal / Hepático', items:[
+      {id:'hepatico', name:'Enfermedad hepática', codes:['B18.0','B18.1','B18.2','B18.8','B18.9','K70.0','K70.1','K70.2','K70.3','K70.4','K70.9',...expMany([{base:'K71',subs:[0,1,2,3,4,5,6,7,8,9]}]),'K72.1','K73.0','K73.1','K73.2','K73.8','K73.9','K74.0','K74.1','K74.2','K74.3','K74.4','K74.5','K76.6']},
+      {id:'eii',      name:'Enteritis crónica / colitis ulcerosa / Crohn', codes:['K50.0','K50.1','K50.8','K50.9','K51.0','K51.1','K51.2','K51.3','K51.8','K51.9','K52.0','K52.1','K52.2','K52.8','K52.9']}
+    ]},
+    {name: 'Sensorial (Oftalmo / Otorrino)', items: [
+      {id:'catarata_ret',name:'Catarata / Retinopatía', codes:['H25.0','H25.1','H25.2','H25.8','H25.9','H26.0','H26.1','H26.2','H26.3','H26.4','H26.8','H26.9','H28.0','H28.1','H28.2','H28.8','Q12.0','Q12.1','Q12.2','Q12.3','Q12.4','Q12.8','Q12.9']},
+      {id:'ceguera',     name:'Ceguera', codes:['H54.0','H54.1','H54.2','H54.3','H54.4','H54.5','H54.6','H54.7']},
+      {id:'glaucoma',    name:'Glaucoma', codes:['H40.1','H40.2','H40.3','H40.4','H40.5','H40.6','H40.8','H40.9','H42.0','H42.8']},
+      {id:'hipoacusia',  name:'Presbiacusia / Hipoacusia / Sordera', codes:['H90.0','H90.1','H90.2','H90.3','H90.4','H90.5','H90.6','H90.7','H90.8','H91.0','H91.1','H91.2','H91.3','H91.8','H91.9']}
+    ]},
+    {name: 'Social y Violencia', items:[
+      {id:'psicosocial', name:'Dificultades socioeconómicas o psicosociales', codes:['Z55.0','Z55.8','Z55.9','Z56.0','Z56.1','Z56.6','Z56.7', ...expMany([{base:'Z57',subs:[0,1,2,3,4,5,6,7,8,9]}]),'Z58.0','Z58.1','Z58.2','Z58.3','Z58.4','Z58.5','Z58.8','Z59.0','Z59.1','Z59.4','Z59.5','Z59.6','Z59.7','Z59.8','Z59.9','Z60.5','Z60.8','Z60.9','Z62.5','Z62.8','Z62.9','Z63.8','Z63.9','Z65.8','Z65.9']},
+      {id:'vif', name:'Maltrato físico / psicológico / VIF', codes:['T74.0','T74.1','T74.2','T74.3','T74.8','T74.9','Y07.0','Y07.1','Y07.2','Y07.3','Y07.8','Y07.9']}
+    ]},
     {name:'Otras Condiciones Sistémicas / Infecciosas / Hematológicas', items:[
       {id:'anemia', name:'Anemia crónica', codes:['D50', ...expMany([{base:'D51',subs:[0,1,2,3,8,9]}]),...expMany([{base:'D52',subs:[0,1,8,9]}]),...expMany([{base:'D53',subs:[0,1,2,8,9]}]),...expMany([{base:'D55',subs:[0,1,2,3,8,9]}]),...expMany([{base:'D56',subs:[0,1,2,3,4,8,9]}]),...expMany([{base:'D57',subs:[0,1,2,3,8]}]),...expMany([{base:'D58',subs:[0,1,2,8,9]}]),...expMany([{base:'D59',subs:[0,1,2,3,4,5,6,8,9]}]),...expMany([{base:'D60',subs:[0,1,8,9]}]),...expMany([{base:'D61',subs:[0,1,2,3,8,9]}]),'D62',...expMany([{base:'D63',subs:[0,8]}]),...expMany([{base:'D64',subs:[0,1,2,3,4,8,9]}])]},
       {id:'vih', name:'Infección por VIH / SIDA', codes:['B21.0','B21.1','B21.2','B21.3','B21.7','B21.8','B21.9','B22.0','B22.1','B22.2','B22.7','B23.0','B23.1','B23.2','B23.8','B24']},
@@ -677,6 +729,9 @@ function resetForm(){
   const clearBtn=document.getElementById('clearQ');
   const acBox=document.getElementById('suggestions');
 
+  function hideSuggestions(){
+    acBox.hidden = true; acBox.innerHTML=''; acState.open = false; acState.items=[]; acState.activeIndex=-1;
+  }
   function clearSearch(){
     if(!input) return;
     input.value='';
@@ -685,24 +740,22 @@ function resetForm(){
   }
   window.clearSearch=clearSearch;
 
-  // === AUTOCOMPLETE: índice simple desde CIE (ignora rangos tipo C00–C97)
+  // === AUTOCOMPLETE: índice desde CIE (se omiten rangos tipo C00–C97)
   const INDEX = Object.entries(CIE)
     .filter(([code, desc]) => code && desc && !code.includes('–'))
     .map(([code, desc]) => ({ code, desc, ncode: normalize(code), ndesc: normalize(desc) }));
 
+  function escapeReg(str){ return str.replace(/[.*+?^${}()|[\]\\]/g,'\\$&'); }
   function rank(entry, term){
     let s = 0;
     if(entry.ncode.startsWith(term)) s += 50;
     else if(entry.ncode.includes(term)) s += 30;
-    // palabra inicial en descripción
     const rx = new RegExp(`\\b${escapeReg(term)}`);
     if(rx.test(entry.ndesc)) s += 25;
     else if(entry.ndesc.includes(term)) s += 10;
-    // pequeño premio por códigos cortos cuando empatan
     s -= Math.max(0, entry.code.length - 3) * 0.2;
     return s;
   }
-  function escapeReg(str){ return str.replace(/[.*+?^${}()|[\]\\]/g,'\\$&'); }
 
   let acState = { open:false, items:[], activeIndex:-1 };
 
@@ -719,10 +772,10 @@ function resetForm(){
 
     acState.items = items;
     acState.activeIndex = items.length ? 0 : -1;
-    renderSuggestions(raw);
+    renderSuggestions();
   }
 
-  function renderSuggestions(raw){
+  function renderSuggestions(){
     acBox.innerHTML = '';
     if(acState.items.length === 0){
       acBox.appendChild(el('div',{class:'ac-empty',text:'❌ No se encontraron resultados'}));
@@ -732,27 +785,16 @@ function resetForm(){
       const item = el('div',{class:`ac-item ${i===acState.activeIndex?'active':''}`, role:'option', tabindex:'-1'});
       item.appendChild(el('span',{class:'ac-code', text:it.code}));
       item.appendChild(el('span',{class:'ac-desc', text:it.desc}));
-      item.addEventListener('mousedown', (ev)=>{ ev.preventDefault(); applySuggestion(it); }); // mousedown evita perder foco antes del click
+      item.addEventListener('mousedown', (ev)=>{ ev.preventDefault(); applySuggestion(it); });
       acBox.appendChild(item);
     });
     acBox.hidden = false; acState.open = true;
   }
 
-  function hideSuggestions(){
-    acBox.hidden = true; acBox.innerHTML=''; acState.open = false; acState.items=[]; acState.activeIndex=-1;
-  }
-
   function moveActive(delta){
     if(!acState.open || acState.items.length===0) return;
     acState.activeIndex = (acState.activeIndex + delta + acState.items.length) % acState.items.length;
-    renderSuggestions(input.value);
-  }
-
-  function applySuggestion(entry){
-    // Mostramos bonito, pero buscamos por el CÓDIGO para precisión
-    input.value = `${entry.code} — ${entry.desc}`;
-    hideSuggestions();
-    doSearch(entry.code); // buscamos por código exacto
+    renderSuggestions();
   }
 
   function doSearch(needle){
@@ -760,13 +802,39 @@ function resetForm(){
     $$('.row').forEach(r=>r.classList.remove('match'));
     if(term.length<2) return;
     $$('.row').forEach(row=>{
-      const n=normalize(row.dataset.name); const c=row.dataset.codes||'';
+      const n=normalize(row.dataset.name); const c=(row.dataset.codes||'');
       if(n.includes(term)||c.includes(term)){
         row.classList.add('match');
         const sub=row.closest('.sub-details'); if(sub) sub.open=true;
         const top=row.closest('details'); if(top) top.open=true;
       }
     });
+  }
+
+  // === Marca la condición y suma el puntaje por código exacto
+  function selectByCode(code){
+    const lc = (code||'').toLowerCase();
+    let targetRow = null;
+    for (const row of $$('.row')) {
+      const codes = (row.dataset.codes||'').split('|');
+      if (codes.includes(lc)) { targetRow = row; break; }
+    }
+    if (targetRow) {
+      const cb = targetRow.querySelector('input[type=checkbox]');
+      if (cb && !cb.checked) cb.checked = true; // marca
+      calcScore();                                // suma
+      const sub = targetRow.closest('.sub-details'); if (sub) sub.open = true;
+      const top = targetRow.closest('details');      if (top) top.open = true;
+      targetRow.classList.add('match');
+      targetRow.scrollIntoView({ behavior: 'smooth', block: 'center' });
+    }
+  }
+
+  function applySuggestion(entry){
+    input.value = `${entry.code} — ${entry.desc}`;
+    hideSuggestions();
+    doSearch(entry.code);     // resalta y abre
+    selectByCode(entry.code); // ✅ marca y suma
   }
 
   if(input){
